--- a/packages/proto/public/styles/tokens.css
+++ b/packages/proto/public/styles/tokens.css
@@ -5,7 +5,18 @@
     --color-hover: rgb(131 126 246);
     --color-text: rgb(246, 229, 219);
     --color-border-section: rgb(69, 151, 73);
-    --color-border-header: rgb(117, 82, 38);
+    --color-border-login: rgb(117, 82, 38);
+    --color-background-login: rgb(74, 48, 15);
+    --color-active-nav: rgb(139, 115, 85);
+    --color-title: rgba(81, 43, 12, 0.93);
+
+    --shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+
+    --section-column-gap: 1rem;
+    --section-row-gap: 1rem;
+
+    --home-column-split: repeat(4, 1fr);
+    --page-column-split: repeat(2, 1fr);
 
     --style-border-section: solid;
     --style-border-header: solid;
