minor edits and mobile design

--- a/packages/proto/public/styles/home.css
+++ b/packages/proto/public/styles/home.css
@@ -4,3 +4,11 @@
         "books books"
         "genres authors";
 }
+@media (max-width: 480px) {
+    .page {
+        grid-template-areas:
+            "books"
+            "genres"
+            "authors";
+    }
+}
