--- a/packages/proto/public/styles/author.css
+++ b/packages/proto/public/styles/author.css
@@ -7,6 +7,18 @@
 .page ul {
     grid-template-columns: var(--page-column-split);
 }
-
+@media (max-width: 480px) {
+    .page {
+        grid-template-columns: 1fr;
+        grid-template-areas:
+            "page-title"
+	    "books"
+            "genres"
+            "years";
+    }
+    .page ul {
+        grid-template-columns: 1fr;
+    }
+}
 
 
