finished responsive design

--- a/packages/proto/public/styles/book.css
+++ b/packages/proto/public/styles/book.css
@@ -16,9 +16,10 @@
         grid-template-columns: 1fr;
         grid-template-areas:
             "page-title"
-	    "author"
+	        "author"
             "genre"
-            "year";
+            "year"
+            "description";
     }
     .page ul {
         grid-template-columns: 1fr;
