--- a/packages/proto/public/styles/genre.css
+++ b/packages/proto/public/styles/genre.css
@@ -12,8 +12,8 @@
         grid-template-columns: 1fr;
         grid-template-areas:
             "page-title"
-	    "books"
-            "genres"
+	        "books"
+            "authors"
             "years";
     }
     .page ul {
