--- a/packages/proto/public/styles/tokens.css
+++ b/packages/proto/public/styles/tokens.css
@@ -43,3 +43,16 @@
 
 
 }
+
+body.dark-mode {
+    --color-background-header: rgba(30, 14, 1, 0.93);
+    --color-background-page: rgb(94, 68, 45);
+    --color-background-section: rgb(49, 81, 50);
+    --color-hover: rgb(111, 107, 197);
+    --color-text: rgb(246, 229, 219);
+    --color-border-section: rgb(49, 103, 51);
+    --color-border-login: rgb(76, 55, 24);
+    --color-background-login: rgb(44, 28, 9);
+    --color-active-nav: rgb(89, 73, 53);
+    --color-title: rgba(60, 31, 9, 0.93);
+}
