--- a/packages/proto/public/styles/tokens.css
+++ b/packages/proto/public/styles/tokens.css
@@ -39,7 +39,8 @@
     --title-font-size: 2rem;
     --title-padding: 0.5rem 1rem;
 
-    --login-padding: 1.5rem;
+    --login-padding: 0.75rem;
+    --login-font-size: 1rem;
 
 
 }
